--- a/testrunner.html
+++ b/testrunner.html
@@ -16,7 +16,7 @@
     </script>
 
     <!-- load code you want to test here -->
-    <script src="./public/makeRequest.js"></script>
+    <script src="./public/scripts/makeRequest.js"></script>
 
     <!-- load your test files here -->
     <script src="test/ajaxTests/ajaxTestsGet.js"></script>
